# nezha

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  README.zh.md  pyproject.toml
.agents/skills/test/: SKILL.md
.agents/skills/test-file/: SKILL.md
.claude/agents/: nezha-dev.md
docs/: TODO.md  architecture.md  claude-code-sdk-usage.md  codex-integration-plan.md  codex-runtime-spike.md  design-notes.md  harness-engineering.md  vision.md
src/nezha/: __init__.py  __main__.py  config.py  delay.py  engine.py  executor.py  feature_queue.py  heartbeat.py  i18n.py  phase.py  task_queue.py
src/nezha/dag/: __init__.py  engine.py  graph.py  handoff.py  report.py  verifier.py
src/nezha/events/: __init__.py  bus.py  file_logger.py  state_writer.py  trace_writer.py  types.py
tests/: test_background.py  test_continuous_scheduler.py  test_cost_breaker.py  test_delay.py  test_direct_api.py  test_feature_e.py  test_feature_f.py  test_feature_queue.py  test_git_strategy.py  test_global_config.py  test_handoff.py  test_integration_test.py  test_json_repair.py  test_knowledge.py  test_management_agent.py  test_model_map.py  test_parallel_safety.py  test_phase.py  test_pipeline_pre_agent.py  test_pm_agent.py  test_project_context.py  test_project_init.py  test_prompt_composer.py  test_report.py  test_security.py  test_session_manifest.py  test_target_scope.py  test_task_d.py  test_task_queue.py  test_tools.py  test_trace_writer.py  test_v2_f1_f2_f3.py  test_v2_f4_steps.py  test_v2_f5_cost.py  test_v2_v21.py  test_verifier.py
(+104 files in other folders)
